@@ -21,7 +21,6 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.configurationprocessor.json.JSONArray;
 import org.springframework.boot.configurationprocessor.json.JSONObject;
@@ -43,7 +42,7 @@ class JsonConverter {
 			.stream()
 			.filter((item) -> item.isOfItemType(itemType))
 			.sorted(ITEM_COMPARATOR)
-			.collect(Collectors.toList());
+			.toList();
 		for (ItemMetadata item : items) {
 			if (item.isOfItemType(itemType)) {
 				jsonArray.put(toJsonObject(item));
